Fix mask not visible on double touch

--- a/touch/player/touch-player.scss
+++ b/touch/player/touch-player.scss
@@ -118,13 +118,15 @@
     transform: rotateX(0deg) rotateY(0deg) scale(1);
 }
 
-.disable-original-hover .bilibili-player-video-control-bottom
+.disable-original-hover .bilibili-player-video-control-bottom,
+.disable-original-hover .bilibili-player-video-control-mask
 {
     opacity: 0 !important;
     visibility: hidden !important;
 }
 .disable-original-hover.touch-video-control-show .bilibili-player-video-control-bottom,
-.disable-original-hover .bilibili-player-video-control-wrap
+.disable-original-hover .bilibili-player-video-control-wrap,
+.disable-original-hover.touch-video-control-show  .bilibili-player-video-control-mask
 {
     opacity: 1 !important;
     visibility: visible !important;
